SourceCode/frontend/src/components/ScoreFilterBar/FilterBar.module.css
.filterContainer {
    display: flex;
    gap: 1rem;
    margin-bottom: 1.5rem;
    flex-wrap: wrap;
    padding: 1rem;
    border-radius: var(--border-radius);
    align-items: stretch;
}

.searchInput {
    flex: 2;
    min-width: 200px;
    padding: 0.5rem;
    border: 1px solid var(--border-color);
    border-radius: var(--border-radius);
}

.filterContainer select {
    padding: 0.5rem;
    border: 1px solid var(--border-color);
    border-radius: var(--border-radius);
    background: white;
}

.searchInput:focus, 
.filterContainer select:focus,
.dateGroup input:focus-within {
    outline: none;
    border-color: var(--primary-color);
}

.dateGroup {
    display: flex;
    flex: 2;
    align-items: flex-end;
    gap: 1.5rem;
    padding: 0.5rem 1rem;
    background: white;
    border: 1px solid var(--border-color);
    border-radius: var(--border-radius);
    box-sizing: border-box;
    min-width: fit-content;
}

.inputWrapper {
    display: flex;
    flex-direction: column;
    flex-direction: row;
    align-items: center;
    gap: 0.5rem;
}

.inputWrapper:first-child {
    position: relative;
    padding-right: 0.5rem;
}

.inputWrapper label {
    color: var(--light-text-color);
    margin-bottom: 2px;
}

.dateGroup input {
    background: transparent;
    border: none;
    outline: none;
    font-family: inherit;
    height: 100%;
    cursor: pointer;
}

.clearButton {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    margin-left: auto;
    padding: 0.5rem 1rem;
    background: white;
    border: 1px solid var(--border-color);
    border-radius: var(--border-radius);
}

.clearButton:hover:not(:disabled) {
    background: var(--light-gray);
    border-color: var(--primary-color);
    box-shadow: 0 4px 12px var(--blue-shadow);
}

.filterRow {
    display: flex;
    gap: 1rem;
    align-items: center;
    width: 100%;
}

.filterRow select {
    flex: 1;
    min-width: 120px;
}

@media (width <= 1167px) {
    .filterContainer {
        gap: 0.5rem;
        padding: 0.75rem;
    }

    .searchInput {
        flex: 1 1 100%;
    }

    .filterContainer select {
        flex: 1 1 calc(50% - 0.25rem);
    }

    .dateGroup {
        flex: 1 1 100%;
        justify-content: space-between;
    }
}

@media (width <= 768px) {
    .filterContainer select,
    .dateGroup {
        flex: 1 1 100%;
    }
    
    .dateGroup {
        flex-direction: column;
        height: auto;
        padding: 0.75rem;
        align-items: flex-start;
    }

    .clearButton {
        flex: 1 1 100%;
        justify-content: center;
    }

    .filterRow {
        flex-direction: column;
    }
    
    .filterRow select {
        width: 100%;
    }
}

